@@ -40,6 +40,11 @@ public:
     QSO();
     ~QSO();
 
+    void setRealTime(const bool _rt);   // Not QSO info but KLog status
+    bool getRealTime();
+    void setManualMode(const bool _rt); // Not QSO info but KLog status
+    bool getManualMode();
+
     void setBackup(const bool _rt);
     bool getBackup();
 
@@ -64,11 +69,6 @@ public:
     QTime getTimeOn();
     QDateTime getDateTimeOn();
     bool setDateTimeOn(const QDateTime &_c);
-
-    void setRealTime(const bool _rt);   // Not QSO info but KLog status
-    bool getRealTime();
-    void setManualMode(const bool _rt); // Not QSO info but KLog status
-    bool getManualMode();
 
     bool setQSOid(const int _i);
     int getQSOid();
